suite/tests/decls/invalid/local-extern-init.c
int main(void)
{
    extern int i = 3;
}
